--- a/spring-wallet-api/pom.xml
+++ b/spring-wallet-api/pom.xml
@@ -14,7 +14,7 @@
     <name>${project.groupId}:${project.artifactId}</name>
     <description>Wallet API</description>
     <properties>
-        <java.version>1.8</java.version>
+        <java.version>17</java.version>
     </properties>
     <dependencies>
         <dependency>
@@ -50,6 +50,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>5.4.0</version> <!-- Verifica si hay una versión más reciente -->
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
