--- a/spring-wallet-api/src/main/resources/application.properties
+++ b/spring-wallet-api/src/main/resources/application.properties
@@ -1,14 +1,15 @@
 
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/digital_wallet
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
-
+server.servlet.context-path=/ecommerce
 
 management.endpoint.metrics.enabled=true
 management.endpoints.web.exposure.include=*
 
 management.endpoint.prometheus.enabled=true
 management.metrics.export.prometheus.enabled=true
+
+spring.config.import=application-${MY_SERVICE_IMPL}-digitalaccount.properties
+#spring.config.import=application-digital-wallet.properties
+#spring.config.import=application-oracle-digitalaccount.properties
+
+#MY_SERVICE_IMPL [mysql,oracle]
+MY_SERVICE_IMPL=${MY_SERVICE_IMPL:mysql}
