--- a/spring-wallet-api/pom.xml
+++ b/spring-wallet-api/pom.xml
@@ -14,7 +14,9 @@
     <name>${project.groupId}:${project.artifactId}</name>
     <description>Wallet API</description>
     <properties>
-        <java.version>1.8</java.version>
+<!--        <java.version>21</java.version>-->
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
     </properties>
     <dependencies>
         <dependency>
@@ -49,6 +51,16 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
+        </dependency>
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc8</artifactId>
+            <scope>runtime</scope>
         </dependency>
     </dependencies>
 
